Fix Enrichment bug